--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #040404;
+  /* background-color: #040404; */
+  background-color: #000000;
   color: #fff;
   position: relative;
   background: transparent;
@@ -18,7 +19,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
+  background: #000000 url("../img/bg.jpg") top right no-repeat;
   /* background-size: cover; */
   background-size: inherit;
   left: 0;
